<resources>
    <string name="app_name">AndroidController</string>

    <!-- Menu -->
    <string name="menu_option_1">Remote Control</string>
    <string name="menu_option_2">Maze Challenge</string>
    <string name="menu_option_3">Accelerometer Challenge</string>
    <string name="menu_option_4">View Logs</string>

    <!-- Logs -->
    <string name="logs_header">List of Logs:</string>

    <!-- Remote Control -->
    <string name="grados">10 ºC</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="lights">LIGHTS</string>
    <string name="auto_man">AUTO/MAN</string>
    <string name="speed">Speed: 0 Km/h</string>
    <string name="gears">Gear: 0</string>
    <string name="gear_up">GEAR UP</string>
    <string name="gear_down">GEAR DOWN</string>
    <string name="go">GAS</string>

    <!-- Accelerometer -->
    <string name="accelerometer">ACCELEROMETER</string>
    <string name="accX">X value: </string>
    <string name="accY">Y value: </string>
    <string name="accZ">Z value: </string>

    <!-- Maze -->
    <string name="sol1">Explore solution</string>
    <string name="sol2">Play solution</string>


</resources>
