<?xml version="1.0" encoding="utf-8"?>

<android.gesture.GestureOverlayView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gestureOverlay"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:gestureStrokeType="single"
    android:eventsInterceptionEnabled="true"
    android:orientation="horizontal">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.android.metg2.androidcontroller.activities.RemoteControlActivity">

        <TableRow
            android:id="@+id/row1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dip">

            <View
                android:id="@+id/bumper_left"
                android:layout_height="40dp"
                android:layout_width="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/rect"/>

            <View
                android:id="@+id/ultrasound"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/rect"/>

            <View
                android:id="@+id/bumper_right"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/rect"/>

        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dip"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/temperature"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textAlignment="viewEnd"
                android:paddingRight="10dp"
                android:text="@string/grados" />

            <Button
                android:id="@+id/autMan_button"
                android:text="@string/auto_man"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/button_style"
                android:textColor="#ffffff"
                android:textStyle="bold" />
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/lights_button"
                android:text="@string/lights"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/button_style"
                android:textColor="#ffffff"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/lights_status"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/off"/>

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dip"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/gears"
                android:text="@string/gears"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="10dp"
                android:textAlignment="viewEnd"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Button
                android:id="@+id/gear_down_button"
                android:text="@string/gear_down"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/button_style"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/gear_up_button"
                android:text="@string/gear_up"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/button_style"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/speed"
                android:text="@string/speed"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dip"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/gas_button"
                android:layout_width="wrap_content"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:text="@string/go"
                android:background="@drawable/button_style"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </TableRow>

        <!--
        <TableRow
            android:id="@+id/row5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="5dip"
            android:gravity="center_horizontal" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="Back to Menu"
                android:id="@+id/Menu"/>

        </TableRow> -->

    </TableLayout>


</android.gesture.GestureOverlayView>
